# newhydraTest

./: LICENSE  MANIFEST.in  pyproject.toml
newhydra/: .PS1helper.py.swp  .fiberdisplay.py.swp  .inputcatalog.py.swp  .main.py.swp  FiberPlacement.py  FiberPlacement.ui  Hydra.config  PS1helper.py  astrometry.py  collision.py  configuration.py  displayobjects.py  fiberdisplay.py  fiberinitializer.py  hydraConcentricities.json  inputcatalog.py  main.py  placer.py  popupWindow.py  progressbar.py  updatehandler.py  worker.py
newhydra/data/: hydraConcentricities.json
